[package]
name = "learn-raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
glam = "0.25.0"
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
