[package]
name = "learn-raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
glam = "0.25.0"
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
rand = "0.8.5"
wgpu = "0.18.0"
winit = "0.28"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]